=== Version 0.5.2
* Enhancements
  * Added ability to find image buttons by src when using watir-webdriver
  * Added ability to find image button by alt when using watir-webdriver

=== Version 0.5.1 / 2011-11-18
* Enhancements
  * Added instance level in_frame method
  * Support for nesting all *_element instance methods inside in_frame call
  * Support for nesting alerts inside an in_frame call
  * Support for nesting confirms inside an in_frame call
  * Support for nesting prompts inside an in_frame call

=== Version 0.5 / 2011-11-06
* Enhancements
  * Validated support for JRuby
  * Removed dependency on Mixology
  * Updated to use selenium-webdriver 2.10.0
  * Updated to use watir-webdriver 0.3.8

=== Version 0.4.4 / 2011-10-26
* Enhancements
  * Can now find Radio buttons by value
  * Updated to use selenium-webdriver 2.9.1
* Fixes
  * Properly change context back to top level after interaction inside a frame with Watir

=== Version 0.4.3 / 2011-10-07
* Enhancements
  * The new watir and selenium fix a fairly serious problem when working with modals and attaching to windows
  * Updated to use selenium-webdriver 2.8.0
  * Updated to use watir-webdriver 0.3.5

=== Version 0.4.2 / 2011-10-01
* Enhancements
  * Proper handling of <button> elements
  * Changed PageFactory so it also sets and instance variable @current_page to the newly created page

=== Version 0.4.1 / 2011-09-30
* Fixes
  * Fixed error when loading plugins using Selenium

=== Version 0.4 / 2011-09-24
* Enhancements
  * Added all of the h4 locators
  * Added all of the h5 locators
  * Added all of the h6 locators
  * Added all of the paragraph locators
  * Added the Paragraph class
  * Added #click to Element
  * Added #style to Element
  * Added #inspect to Element
  * Added #current_url to PageObject
  * Added #clear_cookies to PageObject
  * Added #save_screenshot to PageObject
  * Updated to use selenium-webdriver 2.7.0
  * Updated to use watir-webdriver 0.3.4

=== Version 0.3.2 / 2011-09-22